--- a/main.html
+++ b/main.html
@@ -11,22 +11,25 @@
 
 <body>
     <div class='wrap'>
-        <div class="sub_banner"><img src="./img/1591920354198-36758.gif" alt="서브배너"></nav>
-        </div>
+        <div class="sub_banner"><a href="">서브네브</a></div>
         <header class="header">
-            <div>
-                <ul>
-                    <li><button>kr</button></li>
-                    <li><button>en</button></li>
-                    <li><button>cn</button></li>
-                </ul>
-            </div>
-            <div>
-                <a href="ssg.com">ssg.com</a>
-            </div>
+            <div class="header_nav">
+                <div class="header_nav_wrap">
+                    <div>
+                        <ul>
+                            <li><button>kr</button></li>
+                            <li><button>en</button></li>
+                            <li><button>cn</button></li>
+                        </ul>
+                    </div>
+                    <div>
+                        <a href="ssg.com">ssg.com</a>
+                    </div>
+                </div>
+             </div> <!--header_nav -->
             <nav class="nav">
                 <h1 class="logo">로고</h1>
-                <div>
+                <div class='nav_list'>
                     <ul>
                         <li><a href="">점포 안내</a></li>
                         <li><a href="">쇼핑 정보</a></li>
@@ -34,10 +37,10 @@
                         <li><a href="">아트&컬처</a></li>
                         <li><a href="">매거진</a></li>
                         <li><a href="">고객 서비스</a></li>
-                        <li><a href="">계절과 식탁</a></li>
+                        <li><a href=""><img src="./img/recipeTitle.png" alt="계절과 식탁"></a></li>
                     </ul>
                 </div>
-                <div>
+                <div class='nav_login'>
                     <ul>
                         <li><a href="">로그인</a></li>
                         <li><a href="">돋보기</a></li>
@@ -53,7 +56,7 @@
                 <ul>
                     <li>
                         <a href="">
-                            <div><img src="" alt=""></div>
+                            <div class='shopping_img1'></div>
                             <div>
                                 <span>푸빌라 서머 굿즈</span>
                                 <h1>즐거운 여름의<br />필수품 푸빌라굿즈</h1>
@@ -63,7 +66,7 @@
                     </li>
                     <li>
                         <a href="">
-                            <div><img src="" alt=""></div>
+                            <div class='shopping_img2'></div>
                             <div>
                                 <span>스페셜 기프트</span>
                                 <h1>따듯해서,기뻐서<br />세상을 행복하게 만드는 선물</h1>
@@ -73,7 +76,7 @@
                     </li>
                     <li>
                         <a href="">
-                            <div><img src="" alt=""></div>
+                            <div class='shopping_img3'></div>
                             <div>
                                 <span>고메위크</span>
                                 <h1>더위까지 잊게 만드는<br />미식여행</h1>
@@ -83,7 +86,7 @@
                     </li>
                     <li>
                         <a href="">
-                            <div><img src="" alt=""></div>
+                            <div class='shopping_img4'></div>
                             <div>
                                 <span>레스토랑</span>
                                 <h1>신세계 맛집에서 즐기는<br />여름 인기메뉴</h1>
@@ -93,7 +96,7 @@
                     </li>
                     <li>
                         <a href="">
-                            <div><img src="" alt=""></div>
+                            <div class='shopping_img5'></div>
                             <div>
                                 <span>신세계 멤버스바</span>
                                 <h1>지나칠 수 없는<br />커피 한 잔의 행복</h1>
@@ -103,7 +106,7 @@
                     </li>
                     <li>
                         <a href="">
-                            <div><img src="" alt=""></div>
+                            <div class='shopping_img6'></div>
                             <div>
                                 <span>핫플레이스</span>
                                 <h1>라이크를 부르는<br />핫플 인생샷</h1>
@@ -113,7 +116,7 @@
                     </li>
                     <li>
                         <a href="">
-                            <div><img src="" alt=""></div>
+                            <div class='shopping_img7'></div>
                             <div>
                                 <span>신세계 아카데미</span>
                                 <h1>배우는 즐거움으로<br />취미 클래스</h1>
@@ -123,7 +126,7 @@
                     </li>
                     <li>
                         <a href="">
-                            <div><img src="" alt=""></div>
+                            <div class='shopping_img8'></div>
                             <div>
                                 <span>라이프스타일</span>
                                 <h1>책과 영화가 있는<br />도심 속 휴식</h1>
@@ -133,7 +136,7 @@
                     </li>
                     <li>
                         <a href="">
-                            <div><img src="" alt=""></div>
+                            <div class='shopping_img9'></div>
                             <div>
                                 <span>사은행사</span>
                                 <h1>신세계 씨티클리어카드 결제고객께<br />신세계상품권을 드립니다</h1>
